--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -303,6 +303,7 @@ body {
 @import '../components/TvList/tvList';
 @import '../components/TvList/TvCard/tvCard';
 @import '../components/TvList/Pagination/pagination';
+
 @import '../components/Menu/menu';
 
 @import '../components/Search/search';
@@ -328,6 +329,7 @@ body {
 @import '../pages/Register/register';
 @import '../Pages/Watchlist/watchlist';
 @import '../pages/MovieDetail/movieDetail';
+@import '../pages/ActorDetail/actorDetail';
 
 // other
 @import '../other/Loading/loading';
