--- a/client/src/components/Header/SmallHeader/_smallHeader.scss
+++ b/client/src/components/Header/SmallHeader/_smallHeader.scss
@@ -18,7 +18,7 @@
     .title {
       position: relative;
       text-decoration: none;
-      padding: 0.1rem 0.25rem;
+      padding: 0.085rem 0.25rem;
       cursor: pointer;
       font-weight: var(--font-weight-5);
       font-size: 1.5rem;
@@ -52,14 +52,14 @@
   }
 }
 
-@media screen and (max-width: 640px) {
-  .small-header {
-    &__options {
-      .title {
-        text-align: center;
-        display: flex;
-        align-items: center;
-      }
-    }
-  }
-}
+// @media screen and (max-width: 640px) {
+//   .small-header {
+//     &__options {
+//       .title {
+//         text-align: center;
+//         display: flex;
+//         align-items: center;
+//       }
+//     }
+//   }
+// }
