--- a/client/src/components/MovieInfo/_movieInfo.scss
+++ b/client/src/components/MovieInfo/_movieInfo.scss
@@ -210,6 +210,7 @@
 
       &__overview {
         margin-bottom: 1rem;
+        line-height: 1.75rem;
       }
     }
   }
@@ -299,6 +300,11 @@
           span {
             font-size: 0.9rem;
           }
+        }
+
+        &__overview {
+          font-size: 0.9rem;
+          line-height: 1.5rem;
         }
       }
     }
