--- a/client/src/components/MovieList/MovieCard/_movieCard.scss
+++ b/client/src/components/MovieList/MovieCard/_movieCard.scss
@@ -29,6 +29,7 @@
     width: 35px;
     height: 35px;
     cursor: pointer;
+    z-index: 3;
     background: rgba(0, 0, 0, 0.6);
     color: #fff;
     border-top-left-radius: var(--border-radius-1);
