--- a/client/src/pages/Login/_login.scss
+++ b/client/src/pages/Login/_login.scss
@@ -72,7 +72,9 @@
         padding: 0.6rem;
         width: 97%;
         font-size: var(--font-size-1);
-        font-weight: var(--font-weight-3);
+        font-weight: 900 !important;
+
+        //font-weight: var(--font-weight-3);
 
         display: flex;
         align-items: center;
