--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -327,6 +327,7 @@ body {
 @import '../components/SearchModal/searchModal';
 
 @import '../components/MovieInfo/movieInfo';
+@import '../components/TvInfo/tvInfo';
 @import '../components/CastBackdropsVideo/castBackdropsVideo';
 @import '../components/CastBackdropsVideo/Cast/cast';
 @import '../components/CastBackdropsVideo/Cast/Actor/actor';
@@ -345,6 +346,7 @@ body {
 @import '../pages/Register/register';
 @import '../Pages/Watchlist/watchlist';
 @import '../pages/MovieDetail/movieDetail';
+@import '../pages/TvDetail/tvDetail';
 @import '../pages/ActorDetail/actorDetail';
 
 // other
