--- a/client/src/components/MovieList/MovieCard/_movieCard.scss
+++ b/client/src/components/MovieList/MovieCard/_movieCard.scss
@@ -2,7 +2,6 @@
   position: relative;
   user-select: none;
   border-radius: var(--border-radius-1);
-  //box-shadow: 0 1px 5px #000;
 
   &--image {
     position: relative;
@@ -45,14 +44,14 @@
 
   &__rating {
     position: absolute;
-    right: -1rem;
-    top: -1rem;
-    width: 35px;
-    height: 35px;
-    border-radius: 50px;
+    right: 0;
+    top: 0;
+    width: 28.6px;
+    height: 28.6px;
+    border-top-right-radius: var(--border-radius-1);
+    border-bottom-left-radius: var(--border-radius-1);
     padding: 0.2rem;
     font-weight: 500;
-    box-shadow: 2px 2px 2px #000;
     z-index: 2;
 
     span {
@@ -83,13 +82,13 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: space-between;
+      justify-content: center;
 
       &--title {
         margin: 0;
         font-weight: 500;
         text-align: center;
-        margin: 1rem 1rem 0 1rem;
+        margin: 0rem 1rem 1rem 1rem;
       }
 
       &--more {
@@ -97,7 +96,7 @@
         margin: 0 1rem;
         background: var(--primary);
         color: #000;
-        border-radius: var(--border-radius-1);
+        border-radius: 50px;
         padding: 0.5rem 1rem;
         font-weight: 700;
       }
@@ -108,66 +107,12 @@
       }
 
       &--date {
-        margin: 0 1rem 1rem 1rem;
+        margin: 1rem 1rem 0rem 1rem;
         font-size: 0.8rem;
-        font-weight: 500;
+        font-weight: 400;
       }
     }
   }
-
-  // &__info {
-  //   text-decoration: none;
-  //   padding: 0.5rem;
-  //   position: relative;
-  //   margin: 0;
-  //   margin-top: -0.5rem;
-
-  //   min-height: 100px;
-  //   display: flex;
-  //   flex-direction: column;
-  //   justify-content: space-between;
-
-  //   border-bottom-left-radius: var(--border-radius-1);
-  //   border-bottom-right-radius: var(--border-radius-1);
-
-  //   &--title {
-  //     font-weight: 500;
-  //     margin: 0 0 0.5rem 0;
-  //   }
-
-  //   &__date-rating {
-  //     display: flex;
-  //     justify-content: space-between;
-  //     border-radius: var(--border-radius-1);
-
-  //     &--date {
-  //       display: flex;
-  //       align-items: center;
-  //       font-weight: 500;
-  //       font-size: 0.85rem;
-  //       padding: 0.5rem 1rem;
-  //     }
-
-  //     &--rating {
-  //       margin: 0;
-  //       margin-bottom: 0 !important;
-
-  //       height: 35px;
-  //       width: 35px;
-  //       position: relative;
-
-  //       border-top-right-radius: var(--border-radius-1);
-  //       border-bottom-right-radius: var(--border-radius-1);
-
-  //       span {
-  //         position: absolute;
-  //         top: 50%;
-  //         left: 50%;
-  //         transform: translate(-50%, -50%);
-  //       }
-  //     }
-  //   }
-  // }
 }
 
 .card:hover .card--image .img {
@@ -175,50 +120,22 @@
   transition: var(--transition);
 }
 
-@media screen and (max-width: 786px) {
-  .card {
-    &--image {
-      height: 300px;
-    }
-  }
-}
-
 @media screen and (max-width: 640px) {
   .card {
     &--image {
-      height: 220px;
-    }
-
-    &__rating {
-      height: 25px;
-      width: 25px;
-      top: 0.25rem;
-      right: 0.25rem;
+      height: 250px;
     }
 
     &__info {
-      // min-height: 85px;
+      &__inner {
+        &--title {
+          font-size: 0.9rem;
+        }
 
-      // &--title {
-      //   font-size: 0.9rem;
-      // }
-
-      // &__date-rating {
-      //   &--date {
-      //     font-size: 0.75rem;
-      //     padding: 0.25rem 0.25rem 0.25rem 0.5rem;
-      //     font-weight: 400;
-      //   }
-
-      //   &--rating {
-      //     height: 25px;
-      //     width: 25px;
-
-      //     span {
-      //       font-size: 0.8rem;
-      //     }
-      //   }
-      // }
+        &--date {
+          font-size: 0.75rem;
+        }
+      }
     }
   }
 }
