--- a/client/src/components/TvInfo/_tvInfo.scss
+++ b/client/src/components/TvInfo/_tvInfo.scss
@@ -64,11 +64,12 @@
 
     &__rating {
       position: absolute;
-      left: 15rem;
-      top: 0.25rem;
-      width: 50px;
-      height: 50px;
-      border-radius: 50px;
+      left: 15.6rem;
+      top: 0rem;
+      width: 43.6px;
+      height: 43.6px;
+      border-top-right-radius: var(--border-radius-1);
+      border-bottom-left-radius: var(--border-radius-1);
       padding: 0.2rem;
       font-weight: 500;
 
@@ -128,11 +129,12 @@
     &__rating {
       display: none;
       position: absolute;
-      left: 14rem;
-      top: 0.25rem;
-      width: 50px;
-      height: 50px;
-      border-radius: 50px;
+      left: 14.5rem;
+      top: 0rem;
+      width: 43.6px;
+      height: 43.6px;
+      border-top-right-radius: var(--border-radius-1);
+      border-bottom-left-radius: var(--border-radius-1);
       padding: 0.2rem;
       font-weight: 500;
 
@@ -315,9 +317,8 @@
 
       &__rating {
         left: unset;
-        right: 0.25rem;
-        height: 35px;
-        width: 35px;
+        right: 0rem;
+        border-top-right-radius: 0;
 
         span {
           font-size: 0.8rem;
@@ -330,6 +331,7 @@
         height: 50px;
         width: 50px;
         border-bottom-left-radius: unset;
+        border-top-left-radius: 0;
       }
 
       &--image-2 {
