--- a/client/src/components/MovieList/MovieCard/_movieCard.scss
+++ b/client/src/components/MovieList/MovieCard/_movieCard.scss
@@ -11,7 +11,7 @@
     overflow: hidden;
     border-radius: var(--border-radius-1);
 
-    img {
+    .img {
       width: 100%;
       height: 350px;
       object-fit: cover;
