--- a/client/src/pages/Login/_login.scss
+++ b/client/src/pages/Login/_login.scss
@@ -42,7 +42,7 @@
 
       &--title {
         margin: 0 0 1rem 0;
-        padding: 0;
+        border-radius: var(--border-radius-1);
         font-size: var(--font-size-5);
         font-weight: 500;
       }
@@ -72,8 +72,7 @@
         padding: 0.6rem;
         width: 97%;
         font-size: var(--font-size-1);
-        font-weight: 900 !important;
-        text-transform: uppercase;
+        font-weight: 500 !important;
 
         display: flex;
         align-items: center;
@@ -101,7 +100,7 @@
         a {
           text-decoration: none;
           margin-left: 0.2rem;
-          font-weight: 700;
+          font-weight: 500;
         }
       }
 
