--- a/client/src/components/CastBackdropsVideo/_castBackdropsVideo.scss
+++ b/client/src/components/CastBackdropsVideo/_castBackdropsVideo.scss
@@ -56,14 +56,14 @@
     &__backdrops,
     &__videos {
       &__title {
-        //font-size: 1.2rem;
+        font-size: 1rem;
 
         .length {
-          //height: 30px;
-          //width: 30px;
+          height: 30px;
+          width: 30px;
 
           span {
-            //font-size: 0.7rem;
+            font-size: 0.75rem;
           }
         }
       }
