--- a/client/src/pages/ActorDetail/_actorDetail.scss
+++ b/client/src/pages/ActorDetail/_actorDetail.scss
@@ -27,8 +27,9 @@
         height: 350px;
         margin-right: 2rem;
         margin-bottom: 1rem;
+        border-radius: var(--border-radius-1);
 
-        img {
+        .img {
           width: 233.3px;
           height: 350px;
           border-radius: var(--border-radius-1);
@@ -82,7 +83,7 @@
           width: 170px;
           height: 250px;
 
-          img {
+          .img {
             width: 170px;
             height: 250px;
             border-radius: var(--border-radius-1);
