--- a/client/src/components/SearchModal/_searchModal.scss
+++ b/client/src/components/SearchModal/_searchModal.scss
@@ -7,6 +7,7 @@
   display: none;
 
   transition: z-index, opacity 0.3s ease;
+  background: rgba(0, 0, 0, 0.95) !important;
 
   &__inner {
     margin: 1rem;
@@ -14,9 +15,9 @@
 
   &__close {
     position: absolute;
-    bottom: 4rem;
+    bottom: 8rem;
     left: 45%;
-    background: var(--red);
+    background: var(--primary);
     height: 40px;
     width: 40px;
     border-radius: 50%;
@@ -27,7 +28,7 @@
       top: 55%;
       left: 50%;
       transform: translate(-50%, -50%);
-      color: #fff;
+      color: #000;
     }
   }
 
