--- a/client/src/components/SearchResults/_searchResults.scss
+++ b/client/src/components/SearchResults/_searchResults.scss
@@ -8,8 +8,6 @@
   box-shadow: 0 3px 10px #000;
   text-decoration: none;
 
-  //border: 2px solid var(--primary);
-
   &__inner {
     display: flex;
     flex-direction: column;
@@ -70,14 +68,28 @@
 
 @media screen and (max-width: 786px) {
   .search__results {
-    // width: 90%;
-    // margin-top: 2rem;
+    //background: #fff !important;
+
+    &__inner {
+      //background: #fff !important;
+
+      &__card {
+        //background: #fff !important;
+
+        &__title-date {
+          span {
+            //color: #000 !important;
+          }
+        }
+      }
+    }
   }
 }
 
 @media screen and (max-width: 640px) {
   .search__results {
-    //height: 50vh;
+    height: 60vh;
+
     &__inner {
       &__card {
         &__title-date {
