--- a/client/src/components/MovieList/MovieCard/_movieCard.scss
+++ b/client/src/components/MovieList/MovieCard/_movieCard.scss
@@ -93,7 +93,7 @@
 
       &--more {
         text-decoration: none;
-        margin: 0 1rem;
+        margin: 1rem 0 0 0;
         background: var(--primary);
         color: #000;
         border-radius: 50px;
@@ -107,7 +107,7 @@
       }
 
       &--date {
-        margin: 1rem 1rem 0rem 1rem;
+        margin: 0rem 1rem 1rem 1rem;
         font-size: 0.8rem;
         font-weight: 400;
       }
@@ -128,8 +128,15 @@
 
     &__info {
       &__inner {
+        //justify-content: flex-end;
+
         &--title {
-          font-size: 0.9rem;
+          font-size: 0.8rem;
+        }
+
+        &--more {
+          font-size: 0.8rem;
+          //padding: 0.25rem 0.5rem;
         }
 
         &--date {
