--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -339,6 +339,10 @@ body {
 @import '../components/Reviews/reviews';
 @import '../components/Reviews/Review/review';
 
+@import '../components/ImageViewer/imageViewer';
+
+@import '../components/Player/player';
+
 // pages
 @import '../pages/Home/home';
 @import '../pages/Search/search';
