--- a/client/src/components/MovieInfo/_movieInfo.scss
+++ b/client/src/components/MovieInfo/_movieInfo.scss
@@ -187,6 +187,10 @@
         margin-bottom: 1rem;
         line-height: 1.5rem;
       }
+
+      &__playBtn {
+        display: none;
+      }
     }
   }
 }
@@ -307,6 +311,25 @@
           span {
             font-size: 0.9rem;
           }
+        }
+
+        &__playBtn {
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background: var(--primary);
+          color: #000;
+          width: 100%;
+          text-align: center;
+          padding: 0.5rem 0;
+          border-radius: 3px;
+          font-weight: 700;
+        }
+
+        &__playBtn:hover {
+          filter: brightness(80%);
+          transition: var(--transition);
         }
       }
 
