--- a/client/src/components/MovieInfo/_movieInfo.scss
+++ b/client/src/components/MovieInfo/_movieInfo.scss
@@ -292,6 +292,8 @@
 
 @media screen and (max-width: 640px) {
   .movie__info {
+    padding-bottom: 4rem;
+
     &__image__video {
       margin-bottom: 0rem;
 
