--- a/client/src/components/TvInfo/_tvInfo.scss
+++ b/client/src/components/TvInfo/_tvInfo.scss
@@ -288,6 +288,8 @@
 
 @media screen and (max-width: 640px) {
   .tv__info {
+    padding-bottom: 4rem;
+
     &__image__video {
       margin-bottom: 0rem;
 
