--- a/client/src/components/PlayerOne/_playerOne.scss
+++ b/client/src/components/PlayerOne/_playerOne.scss
@@ -19,7 +19,6 @@
     opacity: 0;
     transition: opacity 0.5s ease;
     border-radius: var(--border-radius-1);
-    //box-shadow: 0px 0px 100px var(--blue);
 
     display: flex;
     align-items: center;
@@ -55,6 +54,7 @@
   .player {
     &__inner {
       height: 50%;
+      border-radius: 0;
     }
   }
 }
