--- a/client/src/components/MovieInfo/_movieInfo.scss
+++ b/client/src/components/MovieInfo/_movieInfo.scss
@@ -51,12 +51,14 @@
     margin-bottom: 2rem;
 
     &--image-1 {
+      width: 300px;
       height: 450px;
       margin-right: 0.5rem;
       border-radius: var(--border-radius-1);
       margin-right: 0.5rem;
 
       .img {
+        width: 300px;
         height: 450px;
         border-radius: var(--border-radius-1);
       }
@@ -64,17 +66,17 @@
 
     &__rating {
       position: absolute;
-      left: 15.6rem;
+      left: 16.25rem;
       top: 0rem;
-      width: 43.6px;
-      height: 43.6px;
+      width: 33.6px;
+      height: 33.6px;
       border-top-right-radius: var(--border-radius-1);
       border-bottom-left-radius: var(--border-radius-1);
       padding: 0.2rem;
       font-weight: 500;
 
       span {
-        font-size: 1rem;
+        font-size: 0.8rem;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -88,8 +90,8 @@
       position: absolute;
       z-index: 1;
       top: -1rem;
-      width: 50px;
-      height: 50px;
+      width: 40px;
+      height: 40px;
       cursor: pointer;
       background: rgba(0, 0, 0, 0.6);
       color: #fff;
@@ -102,6 +104,14 @@
         left: 50%;
         transform: translate(-50%, -45%);
       }
+    }
+
+    &__btn:hover,
+    &__add__btn:hover,
+    &__delete__btn:hover {
+      transform: scale(1.2);
+      border-radius: var(--border-radius-1);
+      transition: var(--transition);
     }
 
     &__player {
@@ -167,6 +177,14 @@
         left: 50%;
         transform: translate(-50%, -45%);
       }
+    }
+
+    &__btn:hover,
+    &__add__btn:hover,
+    &__delete__btn:hover {
+      transform: scale(1.2);
+      border-radius: var(--border-radius-1);
+      transition: var(--transition);
     }
 
     &__inner {
@@ -266,13 +284,21 @@
 
       &__rating {
         display: flex;
-        left: 12.5rem;
+        left: 13.15rem;
+        height: 33.6px;
+        width: 33.6px;
+
+        span {
+          font-size: 0.8rem;
+        }
       }
 
       &__btn,
       &__add__btn,
       &__delete__btn {
         display: flex;
+        height: 40px;
+        width: 40px;
       }
 
       &__inner {
@@ -338,9 +364,11 @@
       &__rating {
         left: unset;
         right: 0rem;
+        height: 43.6px;
+        width: 43.6px;
 
         span {
-          font-size: 0.8rem;
+          font-size: 1rem;
         }
       }
 
@@ -350,6 +378,11 @@
         height: 50px;
         width: 50px;
       }
+
+      // &__rating {
+      //   left: unset;
+      //   right: 0rem;
+      // }
 
       &--image-2 {
         display: none;
@@ -394,6 +427,22 @@
           width: 100%;
           height: 100%;
         }
+      }
+
+      &__rating {
+        height: 33.6px;
+        width: 33.6px;
+
+        span {
+          font-size: 0.8rem;
+        }
+      }
+
+      &__btn,
+      &__add__btn,
+      &__delete__btn {
+        height: 40px;
+        width: 40px;
       }
     }
   }
