--- a/client/src/other/MenuIcon/_menuIcon.scss
+++ b/client/src/other/MenuIcon/_menuIcon.scss
@@ -10,6 +10,11 @@ div {
       font-weight: 400;
     }
   }
+
+  .menu-icon:hover {
+    color: var(--primary);
+    transition: var(--transition);
+  }
 }
 
 @media screen and (max-width: 786px) {
