--- a/client/src/components/PlayerOne/_playerOne.scss
+++ b/client/src/components/PlayerOne/_playerOne.scss
@@ -31,6 +31,7 @@
     overflow: hidden;
 
     h1 {
+      font-size: 1.2rem;
       font-weight: 400;
       color: tomato;
       margin: 0;
@@ -55,6 +56,10 @@
     &__inner {
       height: 50%;
       border-radius: 0;
+
+      h1 {
+        font-size: 1rem;
+      }
     }
   }
 }
