--- a/client/src/components/ImageViewer/_imageViewer.scss
+++ b/client/src/components/ImageViewer/_imageViewer.scss
@@ -35,10 +35,15 @@
       border-bottom-left-radius: var(--border-radius);
     }
 
-    .img {
+    .img-1 {
       width: 1000px;
       height: 550px;
       border-radius: var(--border-radius-1);
+    }
+
+    .img-2,
+    .img-3 {
+      display: none;
     }
 
     &__buttons {
@@ -58,7 +63,7 @@
       width: 100%;
       height: 550px;
 
-      .img {
+      .img-1 {
         border-radius: unset;
         width: 100%;
         height: 550px;
@@ -78,7 +83,12 @@
       height: 450px;
       border-radius: unset;
 
-      .img {
+      .img-1 {
+        display: none;
+      }
+
+      .img-2 {
+        display: flex;
         width: 100vw;
         height: 450px;
         border-radius: unset;
@@ -96,7 +106,7 @@
     &__inner {
       height: 325px;
 
-      .img {
+      .img-2 {
         height: 325px;
       }
     }
@@ -108,7 +118,12 @@
     &__inner {
       height: 225px;
 
-      .img {
+      .img-2 {
+        display: none;
+      }
+
+      .img-3 {
+        display: flex;
         height: 225px;
       }
     }
