--- a/client/src/components/TvInfo/_tvInfo.scss
+++ b/client/src/components/TvInfo/_tvInfo.scss
@@ -27,7 +27,7 @@
     &__date-time {
       display: flex;
       align-items: center;
-      margin-top: 0.5rem;
+      margin-top: 1rem;
 
       .date,
       .time {
@@ -127,13 +127,10 @@
   &__image__detail {
     position: relative;
 
-    &--image-2 {
+    &--image-2,
+    &--image-3,
+    &--image-4 {
       display: none;
-    }
-
-    &--image-3 {
-      display: none;
-      height: 95%;
     }
 
     &__rating {
@@ -334,7 +331,35 @@
       margin-bottom: 0;
       flex-direction: column;
 
+      &--image-2 {
+        display: none;
+      }
+
+      &--image-3 {
+        position: relative;
+        display: block;
+        margin-bottom: 2rem;
+        margin-right: 0;
+        width: 100%;
+        height: 300px;
+        border-radius: unset;
+        border-radius: var(--border-radius-1);
+
+        .img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: unset;
+          border-radius: var(--border-radius-1);
+        }
+      }
+
       &__inner {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+
         &__genres {
           span {
             font-size: 0.9rem;
@@ -378,41 +403,6 @@
         height: 50px;
         width: 50px;
       }
-
-      // &__rating {
-      //   left: unset;
-      //   right: 0rem;
-      // }
-
-      &--image-2 {
-        display: none;
-      }
-
-      &--image-3 {
-        position: relative;
-        display: block;
-        margin-bottom: 2rem;
-        margin-right: 0;
-        width: 100%;
-        height: 300px;
-        border-radius: unset;
-        border-radius: var(--border-radius-1);
-
-        .img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          border-radius: unset;
-          border-radius: var(--border-radius-1);
-        }
-      }
-
-      &__inner {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
-      }
     }
   }
 }
@@ -421,11 +411,19 @@
   .tv__info {
     &__image__detail {
       &--image-3 {
+        display: none;
+      }
+
+      &--image-4 {
+        display: flex;
         height: 225px;
+        margin-bottom: 2rem;
+        border-radius: var(--border-radius-1);
 
         .img {
           width: 100%;
           height: 100%;
+          border-radius: var(--border-radius-1);
         }
       }
 
