--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -154,8 +154,8 @@
   .menu {
     align-items: flex-start;
 
-    transform: translateY(unset);
-    transform: translateX(-120%);
+    // transform: translateY(unset);
+    // transform: translateX(-120%);
 
     &__inner {
       //width: 60%;
