--- a/client/src/pages/ActorDetail/_actorDetail.scss
+++ b/client/src/pages/ActorDetail/_actorDetail.scss
@@ -49,7 +49,7 @@
         .name {
           font-size: 1.1rem;
           font-weight: 500;
-          margin-bottom: 0.5rem;
+          margin-bottom: 1rem;
         }
 
         .birth {
@@ -139,6 +139,11 @@
             width: 100%;
             width: unset;
             //font-size: 0.9rem;
+          }
+
+          .place,
+          .birth {
+            font-size: 0.8rem;
           }
         }
       }
