--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -352,6 +352,8 @@ body {
 @import '../pages/MovieDetail/movieDetail';
 @import '../pages/TvDetail/tvDetail';
 @import '../pages/ActorDetail/actorDetail';
+@import '../Pages/MovieCast/movieCast';
+@import '../Pages/TvCast/tvCast';
 
 // other
 @import '../other/Loading/loading';
