--- a/client/src/components/CastBackdropsVideo/Cast/Actor/_actor.scss
+++ b/client/src/components/CastBackdropsVideo/Cast/Actor/_actor.scss
@@ -1,11 +1,12 @@
 .actor {
   display: flex;
   align-items: center;
+  justify-content: center;
   padding: 0.5rem 1rem;
   padding-left: 0;
   cursor: pointer;
   border-radius: var(--border-radius-1);
-  width: fit-content;
+  width: max-content;
   text-decoration: none;
 
   &__image {
