--- a/client/src/pages/MovieCast/_movieCast.scss
+++ b/client/src/pages/MovieCast/_movieCast.scss
@@ -32,14 +32,15 @@
       &--tagline {
         width: 100%;
         display: flex;
+        display: none;
         align-items: flex-start;
         font-size: 2rem;
         font-weight: 500;
       }
 
       &--tagline {
-        font-size: 1.2rem;
-        margin-bottom: 0.5rem;
+        font-size: 1.1rem;
+        margin-bottom: 1rem;
       }
     }
 
