--- a/client/src/components/MovieInfo/_movieInfo.scss
+++ b/client/src/components/MovieInfo/_movieInfo.scss
@@ -4,7 +4,7 @@
   padding-bottom: 5rem;
 
   &__detail {
-    padding: calc(58.4px + 2rem) 0 2rem 0;
+    padding: calc(58.4px + 2rem) 0 1rem 0;
 
     display: flex;
     flex-direction: column;
@@ -27,7 +27,7 @@
     &__date-time {
       display: flex;
       align-items: center;
-      margin-top: 1rem;
+      margin-top: 0.5rem;
 
       .date,
       .time {
@@ -53,7 +53,6 @@
     &--image-1 {
       width: 300px;
       height: 450px;
-      margin-right: 0.5rem;
       border-radius: var(--border-radius-1);
       margin-right: 0.5rem;
 
@@ -231,7 +230,7 @@
       }
 
       &__date-time {
-        margin-top: 1rem;
+        //margin-top: 1rem;
 
         .date,
         .time {
