--- a/client/src/components/Reviews/_reviews.scss
+++ b/client/src/components/Reviews/_reviews.scss
@@ -51,10 +51,9 @@
   }
 
   &__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    gap: 2rem;
   }
 }
 
@@ -73,6 +72,12 @@
           font-size: 0.75rem;
         }
       }
+    }
+
+    &__container {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 0;
     }
   }
 }
