--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -343,6 +343,8 @@ body {
 
 @import '../components/PlayerOne/playerOne';
 
+@import '../components/ActorCard/actorCard';
+
 // pages
 @import '../pages/Home/home';
 @import '../pages/Search/search';
