--- a/client/src/pages/TvCast/_tvCast.scss
+++ b/client/src/pages/TvCast/_tvCast.scss
@@ -19,7 +19,6 @@
         width: 100%;
         height: 200px;
         border-radius: var(--border-radius-1);
-        margin-right: 1rem;
 
         .img {
           height: 200px;
@@ -35,18 +34,21 @@
         align-items: flex-start;
         font-size: 2rem;
         font-weight: 500;
-        margin-bottom: 0.5rem;
-        margin-left: -0.5rem;
+        margin-bottom: 1rem;
       }
     }
 
     &__full {
       &--title {
-        margin-left: -0.5rem;
         font-size: 1.4rem;
         font-weight: 500;
         display: flex;
         align-items: center;
+        border-left: 4px solid var(--primary);
+
+        .title {
+          margin-left: 0.5rem;
+        }
 
         .length {
           margin: 0;
@@ -65,6 +67,95 @@
             color: #000;
             font-size: 0.8rem;
           }
+        }
+      }
+
+      .cast-loading {
+        display: inline-block;
+        margin: 2rem 0 0 1rem;
+      }
+
+      &__cast {
+        padding: 2rem 0rem 2rem 0;
+        margin-bottom: 4rem;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        gap: 2rem;
+        min-height: 100px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 920px) {
+  .tv__cast {
+    &__inner {
+      &__full {
+        &__cast {
+          grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 786px) {
+  .tv__cast {
+    &__inner {
+      padding: calc(58.4px + 1rem) 0 2rem 0;
+      margin: 0 1rem;
+
+      &__detail {
+        &--title {
+          font-size: 1.5rem;
+        }
+      }
+
+      &__full {
+        &__cast {
+          gap: 1rem;
+          overflow-x: scroll;
+          margin-bottom: 2rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .tv__cast {
+    &__inner {
+      &__full {
+        &--title {
+          font-size: 1rem;
+
+          .length {
+            height: 30px;
+            width: 30px;
+
+            span {
+              font-size: 0.75rem;
+            }
+          }
+        }
+
+        &__cast {
+          align-items: flex-start;
+          grid-template-columns: 1fr 1fr;
+          gap: 1rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 376px) {
+  .tv__cast {
+    &__inner {
+      &__full {
+        &__cast {
+          grid-template-columns: 1fr 1fr;
+          gap: 1rem;
         }
       }
     }
