--- a/client/src/pages/MovieCast/_movieCast.scss
+++ b/client/src/pages/MovieCast/_movieCast.scss
@@ -136,9 +136,11 @@
 @media screen and (max-width: 640px) {
   .movie__cast {
     &__inner {
+      margin: 0;
       &__full {
         &--title {
           font-size: 1rem;
+          margin-left: 1rem;
 
           .length {
             height: 30px;
