--- a/client/src/components/Reviews/_reviews.scss
+++ b/client/src/components/Reviews/_reviews.scss
@@ -10,6 +10,11 @@
     font-size: 1.4rem;
     font-weight: 500;
     margin-bottom: 2rem;
+    border-left: 4px solid var(--primary);
+
+    .title {
+      margin-left: 0.5rem;
+    }
 
     .length {
       margin: 0;
@@ -61,6 +66,18 @@
   .reviews {
     padding: 0rem 2rem;
 
+    &__container {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 0;
+    }
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .reviews {
+    padding: 0rem 1rem;
+
     &__title {
       font-size: 1rem;
 
@@ -73,17 +90,5 @@
         }
       }
     }
-
-    &__container {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 0;
-    }
-  }
-}
-
-@media screen and (max-width: 640px) {
-  .reviews {
-    padding: 0rem 1rem;
   }
 }
