--- a/client/src/pages/TvCast/_tvCast.scss
+++ b/client/src/pages/TvCast/_tvCast.scss
@@ -114,7 +114,7 @@
       &__full {
         &__cast {
           gap: 1rem;
-          overflow-x: scroll;
+          overflow-x: auto;
           margin-bottom: 2rem;
         }
       }
@@ -140,9 +140,10 @@
         }
 
         &__cast {
-          align-items: flex-start;
           grid-template-columns: 1fr 1fr;
-          gap: 1rem;
+          gap: 0rem;
+          align-items: flex-start;
+          justify-items: center;
         }
       }
     }
