--- a/client/src/components/MovieList/MovieCard/_movieCard.scss
+++ b/client/src/components/MovieList/MovieCard/_movieCard.scss
@@ -87,6 +87,7 @@
 
     opacity: 0;
     transition: var(--transition);
+    backface-visibility: hidden;
 
     &__inner {
       width: inherit;
@@ -95,8 +96,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      transform: scale(0);
-      backface-visibility: hidden;
+      opacity: 0;
       transition: var(--transition);
 
       &--title {
@@ -107,13 +107,21 @@
       }
 
       &--more {
+        position: relative;
         text-decoration: none;
         margin: 0rem 0 0 0;
         background: var(--primary);
         color: #000;
         border-radius: 50px;
-        padding: 0.5rem 1rem;
-        font-weight: 700;
+        width: 40px;
+        height: 40px;
+
+        span {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
       }
 
       &--more:hover {
