--- a/client/src/components/Header/_header.scss
+++ b/client/src/components/Header/_header.scss
@@ -55,6 +55,7 @@
       justify-content: center;
       border-radius: var(--border-radius-1);
       padding: 0.25rem;
+      padding-right: 0;
 
       .watchlist {
         padding: 0.5rem;
