--- a/client/src/components/MovieList/_movieList.scss
+++ b/client/src/components/MovieList/_movieList.scss
@@ -9,10 +9,10 @@
 .list {
   min-height: 100vh;
   padding: calc(58.6px + 0rem) 0rem 6rem 0rem;
-  margin: 0;
+  margin: 0 2.5%;
 
   &__wall {
-    width: 100%;
+    width: 99.5%;
     height: 480px;
 
     position: relative;
@@ -153,6 +153,7 @@
 @media screen and (max-width: 1280px) {
   .list {
     padding-top: 58.6px;
+    margin: 0;
 
     &__wall {
       border-radius: 0;
