--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -155,27 +155,27 @@
   background: var(--darkAplha-6);
 }
 
-.lightGradient1 {
-  //box-shadow: 0px 15px 10px -15px #111;
+.lightGradient {
   background: linear-gradient(
-    to right top,
+    to right,
     rgba(255, 255, 255, 1) 20%,
-    rgba(255, 255, 255, 0)
+    rgba(255, 255, 255, 0.8)
   );
 }
 
 .darkGradient {
   background: linear-gradient(
-    to right top,
-    rgba(34, 34, 34, 1) 20%,
-    rgba(34, 34, 34, 0)
+    to right,
+    rgb(51, 51, 51, 1) 20%,
+    rgb(51, 51, 51, 0.8)
   );
 }
 
-.lightGradient {
+.lightGradient1 {
+  //box-shadow: 0px 15px 10px -15px #111;
   background: linear-gradient(
     to right top,
-    rgba(220, 220, 220, 1) 20%,
+    rgba(255, 255, 255, 1) 20%,
     rgba(255, 255, 255, 0)
   );
 }
