--- a/client/src/components/Header/_header.scss
+++ b/client/src/components/Header/_header.scss
@@ -31,6 +31,7 @@
       align-items: center;
 
       .title {
+        margin: 0;
         padding: 0.1rem 0.5rem;
         background: var(--primary);
         position: relative;
@@ -38,7 +39,7 @@
         color: #000;
         margin-right: 1rem;
         cursor: pointer;
-        font-weight: var(--font-weight-5);
+        font-weight: 900;
         font-size: 1.5rem;
         border-radius: var(--border-radius-1);
       }
@@ -75,7 +76,6 @@
           position: relative;
           width: 30px;
           height: 30px;
-          //background: var(--primary);
           color: #fff;
           border-radius: 50%;
 
