--- a/client/src/components/MovieInfo/_movieInfo.scss
+++ b/client/src/components/MovieInfo/_movieInfo.scss
@@ -138,8 +138,8 @@
         }
 
         .overview {
-          margin-bottom: 1rem;
           line-height: 1.5rem;
+          margin-bottom: 2rem;
         }
 
         .play-btn {
@@ -147,14 +147,14 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          background: var(--primary);
-          color: #000;
+          background: var(--red);
+          color: #fff;
           width: fit-content;
           text-align: center;
           padding: 0.5rem;
           padding-right: 1rem;
           border-radius: 25px;
-          font-weight: 500;
+          font-weight: 400;
         }
 
         .play-btn:hover {
