--- a/client/src/components/MovieList/MovieCard/_movieCard.scss
+++ b/client/src/components/MovieList/MovieCard/_movieCard.scss
@@ -2,6 +2,8 @@
   position: relative;
   user-select: none;
   border-radius: var(--border-radius-1);
+  box-shadow: 0 0 1px #000;
+  height: 200px;
 
   &--image {
     position: relative;
@@ -79,10 +81,11 @@
     border-radius: var(--border-radius-1);
     position: absolute;
     width: 100%;
-    height: 98%;
+    height: 100%;
     z-index: 1;
     top: 0;
     left: 0;
+    bottom: 0;
     outline: 2px solid var(--primary);
 
     opacity: 0;
