--- a/client/src/pages/MovieCast/_movieCast.scss
+++ b/client/src/pages/MovieCast/_movieCast.scss
@@ -16,6 +16,7 @@
       margin-bottom: 4rem;
 
       &--image {
+        position: relative;
         width: 100%;
         height: 200px;
         border-radius: var(--border-radius-1);
@@ -25,6 +26,15 @@
           width: 100%;
           border-radius: var(--border-radius-1);
           object-fit: cover;
+        }
+
+        .cover {
+          position: absolute;
+          top: 0;
+          left: 0;
+          border-radius: var(--border-radius-1);
+          width: 100%;
+          height: 100%;
         }
       }
 
@@ -136,6 +146,17 @@
 @media screen and (max-width: 640px) {
   .movie__cast {
     &__inner {
+      &__detail {
+        &--title {
+          font-size: 1.2rem;
+          margin-bottom: 0.5rem;
+        }
+
+        &--tagline {
+          display: none;
+        }
+      }
+
       &__full {
         &--title {
           font-size: 1rem;
