--- a/client/src/pages/TvBackdrops/_tvBackdrops.scss
+++ b/client/src/pages/TvBackdrops/_tvBackdrops.scss
@@ -1,4 +1,4 @@
-.movie__backdrops {
+.tv__backdrops {
   position: relative;
   max-width: 1280px;
   min-height: 100vh;
@@ -104,7 +104,7 @@
 }
 
 @media screen and (max-width: 786px) {
-  .movie__backdrops {
+  .tv__backdrops {
     &__inner {
       padding: calc(58.4px + 1rem) 0 2rem 0;
       margin: 0 1rem;
@@ -133,7 +133,7 @@
 }
 
 @media screen and (max-width: 640px) {
-  .movie__backdrops {
+  .tv__backdrops {
     &__inner {
       &__detail {
         &--title {
