--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -61,7 +61,7 @@
   --font-weight-4: 700;
   --font-weight-5: 900;
 
-  --transition: all 0.5s ease;
+  --transition: all 0.3s ease;
 }
 
 .primaryBg {
@@ -172,7 +172,6 @@
 }
 
 .lightGradient1 {
-  //box-shadow: 0px 15px 10px -15px #111;
   background: linear-gradient(
     to right top,
     rgba(255, 255, 255, 1) 20%,
@@ -181,11 +180,26 @@
 }
 
 .darkGradient1 {
-  //box-shadow: 0px 15px 10px -15px #111;
   background: linear-gradient(
     to right top,
     rgb(51, 51, 51, 1) 20%,
     rgba(34, 34, 34, 0)
+  );
+}
+
+.lightGradient2 {
+  background: linear-gradient(
+    to top,
+    rgba(255, 255, 255, 1),
+    rgba(255, 255, 255, 0.5)
+  );
+}
+
+.darkGradient2 {
+  background: linear-gradient(
+    to top,
+    rgb(51, 51, 51, 1),
+    rgba(34, 34, 34, 0.5)
   );
 }
 
@@ -346,7 +360,6 @@ body {
 
 @import '../components/BackdropCard/backdropCard';
 
-
 // pages
 @import '../pages/Home/home';
 @import '../pages/Search/search';
@@ -359,7 +372,7 @@ body {
 @import '../Pages/MovieCast/movieCast';
 @import '../Pages/TvCast/tvCast';
 @import '../pages/MovieBackdrops/movieBackdrops';
-
+@import '../pages/TvBackdrops/tvBackdrops';
 
 // other
 @import '../other/Loading/loading';
