--- a/client/src/components/CastBackdropsVideo/_castBackdropsVideo.scss
+++ b/client/src/components/CastBackdropsVideo/_castBackdropsVideo.scss
@@ -1,5 +1,5 @@
 .castBackdropVideo {
-  padding: 0.5rem 2.5% 2rem 2.5%;
+  padding: 0.5rem 2.5% 0rem 2.5%;
 
   &__cast,
   &__backdrops,
@@ -46,13 +46,13 @@
 
 @media screen and (max-width: 786px) {
   .castBackdropVideo {
-    padding: 0 2rem 2rem 2rem;
+    padding: 0 2rem 0rem 2rem;
   }
 }
 
 @media screen and (max-width: 640px) {
   .castBackdropVideo {
-    padding: 0 0rem 2rem 1rem;
+    padding: 0 0 0 1rem;
 
     &__cast,
     &__backdrops,
