--- a/client/src/components/TvInfo/_tvInfo.scss
+++ b/client/src/components/TvInfo/_tvInfo.scss
@@ -242,6 +242,8 @@
           .img-2 {
             display: flex;
             width: 100%;
+            min-height: 225px;
+            max-height: 350px;
             border-radius: var(--border-radius-1);
           }
 
