--- a/client/src/components/CastBackdropsVideo/Videos/Video/_video.scss
+++ b/client/src/components/CastBackdropsVideo/Videos/Video/_video.scss
@@ -2,11 +2,12 @@
   position: relative;
   margin-right: 1rem;
   width: 292px;
+  height: 165px;
   border-radius: var(--border-radius-1);
 
   iframe {
     width: 292px;
-    height: 100%;
+    height: 165px;
     border-radius: var(--border-radius-1);
   }
 
@@ -16,12 +17,11 @@
     top: 0;
     left: 0;
     width: 292px;
-    height: 97%;
+    height: 165px;
   }
 
   .cover:hover {
     background: rgba(0, 0, 0, 0.2);
-    height: 97%;
     transition: var(--transition);
   }
 }
@@ -35,3 +35,18 @@
     margin-right: 1rem;
   }
 }
+
+// @media screen and (max-width: 540px) {
+//   .video {
+//     height: 150px;
+
+//     iframe {
+//       height: 150px;
+//     }
+
+//     .cover {
+//       width: 100%;
+//       height: 150px;
+//     }
+//   }
+// }
