--- a/client/src/components/MovieInfo/_movieInfo.scss
+++ b/client/src/components/MovieInfo/_movieInfo.scss
@@ -31,7 +31,8 @@
           border-radius: var(--border-radius-1);
         }
 
-        .img-2 {
+        .img-2,
+        .img-icon-2 {
           display: none;
         }
 
@@ -231,18 +232,29 @@
         }
 
         .image {
+          position: relative;
           width: 100%;
           height: 100%;
           margin-bottom: 2rem;
 
-          .img-1 {
+          .img-1,
+          .img-icon-1 {
             display: none;
           }
 
-          .img-2 {
+          .img-2,
+          .img-icon-2 {
             display: flex;
             width: 100%;
+            min-height: 225px;
+            max-height: 350px;
             border-radius: var(--border-radius-1);
+          }
+
+          .img-icon-2 {
+            display: flex;
+            align-items: center;
+            justify-content: center;
           }
 
           .rating {
