--- a/client/src/components/MovieList/MovieCard/_movieCard.scss
+++ b/client/src/components/MovieList/MovieCard/_movieCard.scss
@@ -95,6 +95,7 @@
     left: 0;
     bottom: 0;
     outline: 2px solid var(--primary);
+    //box-shadow: var(--box-shadow-1);
 
     opacity: 0;
     transition: var(--transition);
